Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -24,15 +24,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Give me your name: Billy\n",
-      "Your name is Billy\n"
+      "Give me your name: Minna\n",
+      "Your name is Minna\n"
      ]
     }
    ],
@@ -63,15 +63,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your age: 43\n",
-      "You are 43 years old\n"
+      "Enter your age: 22\n",
+      "You are 22 years old\n"
      ]
     }
    ],
@@ -90,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are 43 years old\n"
+      "You are 22 years old\n"
      ]
     }
    ],
@@ -115,17 +115,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your name: Billy\n",
-      "How old are you: 43\n",
-      "what is the current year: 2019\n",
-      "Billy will be 100 years old in the year 2076\n"
+      "What is your name: Minna\n",
+      "How old are you: 22\n"
      ]
     }
    ],
@@ -163,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
